--- a/app/assets/stylesheets/landing-page.scss
+++ b/app/assets/stylesheets/landing-page.scss
@@ -15,150 +15,153 @@ h6 {
     font-weight: 700;
 }
 
-.topnav {
-    font-size: 14px;
-}
+.landing-page-namespace {
 
-.lead {
-    font-size: 18px;
-    font-weight: 400;
-}
+    .topnav {
+        font-size: 14px;
+    }
 
-.intro-header {
-    padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
-    padding-bottom: 50px;
-    text-align: center;
-    color: #f8f8f8;
-    background: url(intro-bg.jpg) no-repeat center center;
-    background-size: cover;
-}
+    .lead {
+        font-size: 18px;
+        font-weight: 400;
+    }
 
-.intro-message {
-    position: relative;
-    padding-top: 20%;
-    padding-bottom: 20%;
-}
+    .intro-header {
+        padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
+        padding-bottom: 50px;
+        text-align: center;
+        color: #f8f8f8;
+        background: url(intro-bg.jpg) no-repeat center center;
+        background-size: cover;
+    }
 
-.intro-message > h1 {
-    margin: 0;
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
-    font-size: 5em;
-}
-
-.intro-divider {
-    width: 400px;
-    border-top: 1px solid #f8f8f8;
-    border-bottom: 1px solid rgba(0,0,0,0.2);
-}
-
-.intro-message > h3 {
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
-}
-
-@media(max-width:767px) {
     .intro-message {
-        padding-bottom: 15%;
+        position: relative;
+        padding-top: 20%;
+        padding-bottom: 20%;
     }
 
     .intro-message > h1 {
-        font-size: 3em;
-    }
-
-    ul.intro-social-buttons > li {
-        display: block;
-        margin-bottom: 20px;
-        padding: 0;
-    }
-
-    ul.intro-social-buttons > li:last-child {
-        margin-bottom: 0;
+        margin: 0;
+        text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+        font-size: 5em;
     }
 
     .intro-divider {
-        width: 100%;
+        width: 400px;
+        border-top: 1px solid #f8f8f8;
+        border-bottom: 1px solid rgba(0,0,0,0.2);
     }
-}
 
-.network-name {
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: 400;
-    letter-spacing: 2px;
-}
+    .intro-message > h3 {
+        text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    }
 
-.content-section-a {
-    padding: 50px 0;
-    background-color: #f8f8f8;
-}
+    @media(max-width:767px) {
+        .intro-message {
+            padding-bottom: 15%;
+        }
 
-.content-section-b {
-    padding: 50px 0;
-    border-top: 1px solid #e7e7e7;
-    border-bottom: 1px solid #e7e7e7;
-}
+        .intro-message > h1 {
+            font-size: 3em;
+        }
 
-.section-heading {
-    margin-bottom: 30px;
-}
+        ul.intro-social-buttons > li {
+            display: block;
+            margin-bottom: 20px;
+            padding: 0;
+        }
 
-.section-heading-spacer {
-    float: left;
-    width: 200px;
-    border-top: 3px solid #e7e7e7;
-}
+        ul.intro-social-buttons > li:last-child {
+            margin-bottom: 0;
+        }
 
-.banner {
-    padding: 100px 0;
-    color: #f8f8f8;
-    background: url(banner-bg.jpg) no-repeat center center;
-    background-size: cover;
-}
+        .intro-divider {
+            width: 100%;
+        }
+    }
 
-.banner h2 {
-    margin: 0;
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
-    font-size: 3em;
-}
+    .network-name {
+        text-transform: uppercase;
+        font-size: 14px;
+        font-weight: 400;
+        letter-spacing: 2px;
+    }
 
-.banner ul {
-    margin-bottom: 0;
-}
+    .content-section-a {
+        padding: 50px 0;
+        background-color: #f8f8f8;
+    }
 
-.banner-social-buttons {
-    float: right;
-    margin-top: 0;
-}
+    .content-section-b {
+        padding: 50px 0;
+        border-top: 1px solid #e7e7e7;
+        border-bottom: 1px solid #e7e7e7;
+    }
 
-@media(max-width:1199px) {
-    ul.banner-social-buttons {
+    .section-heading {
+        margin-bottom: 30px;
+    }
+
+    .section-heading-spacer {
         float: left;
-        margin-top: 15px;
+        width: 200px;
+        border-top: 3px solid #e7e7e7;
     }
-}
 
-@media(max-width:767px) {
+    .banner {
+        padding: 100px 0;
+        color: #f8f8f8;
+        background: url(banner-bg.jpg) no-repeat center center;
+        background-size: cover;
+    }
+
     .banner h2 {
         margin: 0;
         text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
         font-size: 3em;
     }
 
-    ul.banner-social-buttons > li {
-        display: block;
-        margin-bottom: 20px;
-        padding: 0;
-    }
-
-    ul.banner-social-buttons > li:last-child {
+    .banner ul {
         margin-bottom: 0;
     }
-}
 
-footer {
-    padding: 50px 0;
-    background-color: #f8f8f8;
-}
+    .banner-social-buttons {
+        float: right;
+        margin-top: 0;
+    }
 
-p.copyright {
-    margin: 15px 0 0;
+    @media(max-width:1199px) {
+        ul.banner-social-buttons {
+            float: left;
+            margin-top: 15px;
+        }
+    }
+
+    @media(max-width:767px) {
+        .banner h2 {
+            margin: 0;
+            text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+            font-size: 3em;
+        }
+
+        ul.banner-social-buttons > li {
+            display: block;
+            margin-bottom: 20px;
+            padding: 0;
+        }
+
+        ul.banner-social-buttons > li:last-child {
+            margin-bottom: 0;
+        }
+    }
+
+    footer {
+        padding: 50px 0;
+        background-color: #f8f8f8;
+    }
+
+    p.copyright {
+        margin: 15px 0 0;
+    }
 }
