Set up invitations, but without the team choice

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,16 @@
                 <li>
                     <a href="#contact">Contact</a>
                 </li>
+
+                <% if teammate_signed_in? %>
+                    <li>
+                        <%= link_to 'Logout', destroy_teammate_session_path, method: :delete %>
+                    </li>
+                <% else %>
+                    <li>
+                        <%= link_to 'Login', new_teammate_session_path %>
+                    </li>
+                <% end %>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
