--- a/app/views/teammates/team/new.html.erb
+++ b/app/views/teammates/team/new.html.erb
@@ -1,3 +1,5 @@
 <div>Create your team</div>
 <%= render 'form' %>
 
+<h3 class="extra-margin-top">Invite a teammate</h3>
+<%= render 'invite_teammate_form' %>
