--- a/app/views/teammates/invitations/edit.html.erb
+++ b/app/views/teammates/invitations/edit.html.erb
@@ -1,11 +1,20 @@
 <h2><%= t 'devise.invitations.edit.header' %></h2>
 
-<%= simple_form_for resource, as: resource_name, url: invitation_path(resource_name), html: { method: :put } do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :invitation_token %>
+<div class="col-md-6 col-md-offset-3 panel panel-default">
+    <div class="panel-body">
+        <h2>Create Account</h2>
 
-  <%= f.input :password %>
-  <%= f.input :password_confirmation %>
+        <%= simple_form_for resource, as: resource_name, url: invitation_path(resource_name), html: { method: :put } do |f| %>
+          <%= devise_error_messages! %>
+          <%= f.hidden_field :invitation_token %>
 
-  <%= f.button :submit, t("devise.invitations.edit.submit_button") %>
-<% end %>
+          <%= f.input :name %>
+          <%= f.input :city %>
+          <%= f.input :password %>
+          <%= f.input :password_confirmation %>
+
+          <%= f.button :submit, t("devise.invitations.edit.submit_button") %>
+        <% end %>
+
+    </div>
+</div>
