--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,8 +53,14 @@
     <!-- /.container -->
 </nav>
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<!-- <p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p> -->
+
+    <% messages = [] %>
+    <% flash.each do |type, message| %>
+        <% messages << message %>
+    <% end %>
+    <%= notify('info', messages, 'bottom-left', '4000') %>
 
 <%= yield %>
 
