--- a/app/views/teammates/team/new.html.erb
+++ b/app/views/teammates/team/new.html.erb
@@ -1,5 +1,7 @@
-<div>Create your team</div>
-<%= render 'form' %>
-
-<h3 class="extra-margin-top">Invite a teammate</h3>
-<%= render 'invite_teammate_form' %>
+<div class="container" style="padding-top: 12%;">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+            <%= render 'form' %>
+        </div>
+    </div>
+</div>
