--- a/app/views/teammates/team/index.html.erb
+++ b/app/views/teammates/team/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container" style="padding-top: 5%;">
     <% if @team %>
-        <div class="row">
+        <div class="row-off">
             <div class="col-md-6">
                 <h3>Your team:</h3>
                 <h4><%= @team.name %></h4>
@@ -18,19 +18,29 @@
                                 <%= list_item %>
                             </li>
                         <% else %>
-                            <li>Pending - <%= t.email %></li>
+                            <li>Invitation pending - <%= t.email %></li>
                         <% end %>
                     <% end %>
                 </ul>
+
+                <% if @team.teammates.size < 3 %>
+                    <h3 class="extra-margin-top">Invite a new team member:</h3>
+                    <%= render 'invite_teammate_form' %>
+                <% else %>
+                    <p>Your team is full.</p>
+                <% end %>
             </div>
         </div>
-
-        <% if @team.teammates.size < 3 %>
-            <h3 class="extra-margin-top">Invite a new team member:</h3>
-            <%= render 'invite_teammate_form' %>
-        <% else %>
-            <p>Your team is full.</p>
-        <% end %>
+        <div class="row-off">
+            <% if @team.projects.first and @team.projects.size > 0 %>
+                <% project = @team.projects.first %>
+                <h3>Project</h3>
+                <h4><%= project.name %></h4>
+                <p><%= project.description %></p>
+            <% else %>
+                <%= link_to 'Create new project', new_project_path %>
+            <% end %>
+        </div>
 
     <% elsif @teams and @teams.size > 0 %>
         <div>Teams:</div>
