--- a/app/views/teammates/unlocks/new.html.erb
+++ b/app/views/teammates/unlocks/new.html.erb
@@ -1,16 +1,21 @@
-<h2>Resend unlock instructions</h2>
+<div class="container" style='padding-top: 10%;'>
+    <div class="row">
+        <div class="col-md-6">
+            <h2>Resend unlock instructions</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
-  <%= f.full_error :unlock_token %>
+            <%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post, class: "form-horizontal" }) do |f| %>
+              <%= f.error_notification %>
+              <%= f.full_error :unlock_token %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-  </div>
+              <div class="form-group">
+                <%= f.input :email, required: true, autofocus: true, input_html: {class: "form-control"} %>
+              </div>
+              <div class="form-group">
+                <%= f.button :submit, "Resend unlock instructions", class: "btn btn-block" %>
+              </div>
+            <% end %>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Resend unlock instructions" %>
-  </div>
-<% end %>
-
-<%= render "teammates/shared/links" %>
+            <%= render "devise/shared/links" %>
+        </div>
+    </div>
+</div>
