--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,15 +38,21 @@
                     <%= link_to 'Contact', contact_path %>
                 </li>
 
-                <% if teammate_signed_in? %>
-                    <li>
+                <li>
+                    <% if teammate_signed_in? %>
                         <%= link_to 'Logout', destroy_teammate_session_path, method: :delete %>
-                    </li>
-                <% else %>
-                    <li>
+                    <% else %>
                         <%= link_to 'Login', new_teammate_session_path %>
-                    </li>
-                <% end %>
+                    <% end %>
+                </li>
+
+                <li>
+                    <% if I18n.locale != I18n.default_locale %>
+                        <%= link_to 'English', url_for(locale: 'en') %>
+                    <% else %>
+                        <%= link_to 'Русский', url_for(locale: 'ru') %>
+                    <% end %>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
