--- a/app/views/teammates/team/index.html.erb
+++ b/app/views/teammates/team/index.html.erb
@@ -36,7 +36,7 @@
                 <% project = @team.projects.first %>
                 <h3>Project</h3>
                 <h4><%= project.name %></h4>
-                <p><%= project.description %></p>
+                <%= markdown(project.description) %>
             <% else %>
                 <%= link_to 'Create new project', new_project_path %>
             <% end %>
