--- a/app/assets/stylesheets/landing-page.scss
+++ b/app/assets/stylesheets/landing-page.scss
@@ -57,6 +57,15 @@ h6 {
         text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
     }
 
+    .landing-first-block-links-ul {
+        margin-top: -35%;
+        margin-bottom: -15%;
+    }
+
+    .countdown-block {
+        margin-top: -8%;
+    }
+
     @media(max-width:767px) {
         .intro-message {
             padding-bottom: 15%;
