--- a/app/views/home/teams.html.erb
+++ b/app/views/home/teams.html.erb
@@ -19,16 +19,60 @@
                                     <%= t.name %>
                                 </td>
                                 <td class="agenda-events">
-                                    <% if t.projects.first %>
-                                        <div class="agenda-event">
-                                            <h1><%= t.projects.first.name %></h1>
-                                            <br>
-                                            <%= markdown(t.projects.first.description) %>
-                                        </div>
-                                    <% else %>
-                                        <span> - </span>
-                                    <% end %>
+                                    <button data-toggle='modal' data-target="#project-modal-<%= t.projects.first.id %>">
+                                        <h1><%= t.projects.first.name %></h1>
+                                    </button>
                                 </td>
+
+
+
+
+
+    <!-- line modal -->
+    <div class="modal fade" id="#project-modal-<%= t.projects.first.id %>" tabindex="-1" role="dialog" aria-labelledby="modalLabel<%= t.projects.first.id %>" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+                <h3 class="modal-title" id="lineModalLabel<%= t.projects.first.id %>">My Modal</h3>
+            </div>
+            <div class="modal-body">
+
+                <!-- content goes here -->
+                <%= markdown(t.projects.first.description) %>
+            </div>
+            <div class="modal-footer">
+                <div class="btn-group btn-group-justified" role="group" aria-label="group button">
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-default" data-dismiss="modal"  role="button">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
+<!--
+                                <td class="modal-fade" id="project-modal-<%= t.projects.first.id %>" tabindex="-1" role="dialog" aria-labelledby="projectModalLabel<%= t.projects.first.id %>">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                <h4 class="modal-title" id="projectModalLabel<%= t.projects.first.id %>"><%= t.projects.first.name %></h4>
+                                            </div>
+                                            <div class="modal-body">
+                                                <%= markdown(t.projects.first.description) %>
+                                            </div>
+                                            <div class="modal-footer"><button type="button" class="btn btn-default" data-dismiss="modal">Close</button></div>
+                                        </div>
+                                    </div>
+                                </td> -->
+
                                 <td>
                                     <% if t.projects.first %>
                                     <a href="<%= t.projects.first.link %>">
