--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -56,8 +56,9 @@
     <div class="content-section-a">
 
         <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
+            <!-- <div class="row"> -->
+                <%= render 'carousel' %>
+<!--                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
@@ -67,8 +68,8 @@
                     <img class="img-responsive" src="<%= image_path('ipad.png') %>" alt="">
                 </div>
             </div>
-
-        </div>
+ -->
+        <!-- </div> -->
         <!-- /.container -->
 
     </div>
