--- a/app/views/home/_carousel.html.erb
+++ b/app/views/home/_carousel.html.erb
@@ -1,10 +1,10 @@
 <div id="main_area">
         <!-- Slider -->
         <div class="mentors-carousel-header">
-            <h2>Our Mentors</h2>
+            <h2 style='float: left;'>Our Mentors</h2>
             <ul class="list-inline intro-social-buttons landing-first-block-links-ul">
-                <li>
-                    <%= link_to I18n.t('landing.mentor_sign_up_button'),new_mentor_registration_path , { class: 'btn btn-default btn-lg' } %>
+                <li style='list-style: none;'>
+                    <%= link_to I18n.t('landing.mentor_sign_up_button'),new_mentor_registration_path , { class: 'btn btn-default btn-lg', style: 'float: right;' } %>
                 </li>
             </ul>
         </div>
