Align the mentor sign_up button

--- a/app/views/home/_carousel.html.erb
+++ b/app/views/home/_carousel.html.erb
@@ -2,7 +2,7 @@
         <!-- Slider -->
         <div class="mentors-carousel-header">
             <h2 style='float: left;'>Our Mentors</h2>
-            <li style='list-style: none;'>
+            <li style='list-style: none; margin-top: 1%;'>
                 <%= link_to I18n.t('landing.mentor_sign_up_button'),new_mentor_registration_path , { class: 'btn btn-default btn-lg', style: 'float: right;' } %>
             </li>
         </div>
@@ -86,7 +86,7 @@
 
         <div class="row hidden-xs" id="slider-thumbs">
                 <!-- Bottom switcher of slider -->
-                <ul class="hide-bullets">
+                <ul class="hide-bullets carousel-thumbnails-list" style="list-style-type: none; margin-top: 20px;">
                     <li class="col-sm-2">
                         <a class="thumbnail" id="carousel-selector-0"><img src="http://placehold.it/170x100&amp;text=one"></a>
                     </li>
