--- a/app/assets/stylesheets/carousel.scss
+++ b/app/assets/stylesheets/carousel.scss
@@ -1,5 +1,10 @@
 .hide-bullets {
-    list-style:none;
+    list-style: none;
     margin-left: -40px;
-    margin-top:20px;
+    margin-top: 20px;
+}
+
+.carousel-thumbnails-list {
+    list-style-type: none !important;
+    margin-top: 20px !important;
 }
