--- a/app/views/mentors/passwords/new.html.erb
+++ b/app/views/mentors/passwords/new.html.erb
@@ -1,15 +1,21 @@
-<h2>Forgot your password?</h2>
+<div class="container" style='padding-top: 10%;'>
+    <div class="row">
+        <div class="col-md-6">
+            <h2>Forgot your password?</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
+            <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+              <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-  </div>
+              <div class="form-group">
+                <%= f.input :email, required: true, autofocus: true %>
+              </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
+              <div class="form-group">
+                <%= f.button :submit, "Send me reset password instructions", class: "btn btn-block" %>
+              </div>
+            <% end %>
 
-<%= render "mentors/shared/links" %>
+            <%= render "mentors/shared/links" %>
+        </div>
+    </div>
+</div>
