--- a/app/views/mentors/registrations/new.html.erb
+++ b/app/views/mentors/registrations/new.html.erb
@@ -1,17 +1,32 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4">
+      <h2 style="padding-top: 15%;">Sign up</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
+          <div class="form-group">
+            <%= f.error_notification %>
+            <%= f.input :name, required: true, autofocus: true, label: false, placeholder: "Name", input_html: {class: "form-control"} %>
+            <br>
+            <%= f.input :email, required: true, autofocus: true, label: false, placeholder: "Email", input_html: {class: "form-control"} %>
+            <br>
+            <%= f.input :description, required: true, autofocus: true, label: false, placeholder: "A couple words about yourself", input_html: {class: "form-control"} %>
+            <br>
+            <%= f.input :organization, required: true, autofocus: true, label: false, placeholder: "Organization", input_html: {class: "form-control"} %>
+            <br>
+            <%= f.input :password, required: true, label: false, placeholder: "Password", input_html: {class: "form-control"} %>
+            <br>
+            <%= f.input :password_confirmation, required: true, label: false, placeholder: "Confirm password", input_html: {class: "form-control"} %>
+            <br>
+          </div>
+
+          <div class="form-actions">
+            <%= f.button :submit, "Sign up", class: "btn btn-primary btn-block form-control" %>
+          </div>
+        <% end %>
+
+        <%= render "mentors/shared/links" %>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "mentors/shared/links" %>
+</div>
