--- a/app/views/teammates/passwords/new.html.erb
+++ b/app/views/teammates/passwords/new.html.erb
@@ -3,7 +3,7 @@
         <div class="col-md-6">
             <h2>Forgot your password?</h2>
 
-            <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: 'form-horizontal' }) do |f| %>
+            <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
               <%= f.error_notification %>
 
               <div class="form-group">
