--- a/app/views/teammates/registrations/new.html.erb
+++ b/app/views/teammates/registrations/new.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-4 col-md-offset-4">
       <h2 style="padding-top: 15%;">Sign up</h2>
 
-      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "form-horizontal"}) do |f| %>
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
       <div class="form-group">
         <%= f.error_notification %>
