--- a/app/views/teammates/unlocks/new.html.erb
+++ b/app/views/teammates/unlocks/new.html.erb
@@ -3,13 +3,14 @@
         <div class="col-md-6">
             <h2>Resend unlock instructions</h2>
 
-            <%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post, class: "form-horizontal" }) do |f| %>
+            <%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
               <%= f.error_notification %>
               <%= f.full_error :unlock_token %>
 
               <div class="form-group">
                 <%= f.input :email, required: true, autofocus: true, input_html: {class: "form-control"} %>
               </div>
+
               <div class="form-group">
                 <%= f.button :submit, "Resend unlock instructions", class: "btn btn-block" %>
               </div>
