--- a/app/views/mentors/registrations/new.html.erb
+++ b/app/views/mentors/registrations/new.html.erb
@@ -15,6 +15,8 @@
             <br>
             <%= f.input :organization, required: true, autofocus: true, label: false, placeholder: "Organization", input_html: {class: "form-control"} %>
             <br>
+            <%= f.input :avatar, as: :file, input_html: {class: "form-control"} %>
+            <br>
             <%= f.input :password, required: true, label: false, placeholder: "Password", input_html: {class: "form-control"} %>
             <br>
             <%= f.input :password_confirmation, required: true, label: false, placeholder: "Confirm password", input_html: {class: "form-control"} %>
