--- a/app/views/teammates/registrations/edit.html.erb
+++ b/app/views/teammates/registrations/edit.html.erb
@@ -8,6 +8,9 @@
        <div class="form-group">
           <%= f.error_notification %>
           <%= f.input :email, required: true, autofocus: true %>
+          <%= f.input :name, required: true %>
+          <%= f.input :city, required: true %>
+          <%= f.input :avatar, as: :file %>
 
           <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
             <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
