--- a/app/views/teammates/team/_form.html.erb
+++ b/app/views/teammates/team/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@team, url: team_index_path) do |f| %>
+<%= simple_form_for(@team) do |f| %>
     <%= f.error_notification %>
     <%= f.input :name, required: true, label: false, placeholder: 'Team name', input_html: { class: 'form-control' } %>
     <%= f.button :submit, class: 'btn btn-primary btn-block' %>
