--- a/app/views/teammates/team/index.html.erb
+++ b/app/views/teammates/team/index.html.erb
@@ -5,6 +5,11 @@
             <li>
                 <%= link_to 'Edit Profile', edit_teammate_registration_path %>
             </li>
+            <% if @team %>
+                <li>
+                    <%= link_to 'Edit Team', edit_team_path(@team.id) %>
+                </li>
+            <% end %>
             <% if @team && @team.projects.first %>
                 <li>
                     <%= link_to 'Edit Project', edit_project_path(@team.projects.first.id) %>
