--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -59,7 +59,7 @@
 
             <div class="container">
                 <!-- <div class="row"> -->
-                    <%= render 'carousel', mentors: @mentors %>
+                    <%= render partial: 'carousel', locals: { mentors: @mentors } %>
     <!--                 <div class="col-lg-5 col-sm-6">
                         <hr class="section-heading-spacer">
                         <div class="clearfix"></div>
@@ -78,7 +78,7 @@
     <% end %>
     <!-- /.content-section-a -->
 
-    <div class="content-section-b">
+<!--     <div class="content-section-b">
 
         <div class="container">
 
@@ -94,13 +94,13 @@
                 </div>
             </div>
 
-        </div>
+        </div> -->
         <!-- /.container -->
 
-    </div>
+    <!-- </div> -->
     <!-- /.content-section-b -->
 
-    <div class="content-section-a">
+<!--     <div class="content-section-a">
 
         <div class="container">
 
@@ -116,10 +116,10 @@
                 </div>
             </div>
 
-        </div>
+        </div> -->
         <!-- /.container -->
 
-    </div>
+   <!--  </div> -->
     <!-- /.content-section-a -->
 
     <a  name="contact"></a>
@@ -134,13 +134,10 @@
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
                         <li>
-                            <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                            <%= link_to I18n.t('landing.sign_up_button'),new_teammate_registration_path , { class: 'btn btn-default btn-lg' } %>
                         </li>
                         <li>
-                            <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                            <%= link_to I18n.t('landing.mentor_sign_up_button'),mentors_path , { class: 'btn btn-default btn-lg' } %>
                         </li>
                     </ul>
                 </div>
