Add sponsors slider and registration link to the header

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,8 @@
 @import './landing-page';
 @import './teams_list';
 @import './countdown';
+@import './carousel';
+@import './sponsors-slider';
 
 
 .img-small-round {
