--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,15 +44,20 @@
                         <%= link_to 'Login', new_teammate_session_path %>
                     <% end %>
                 </li>
+                <% if teammate_signed_in? || mentor_signed_in? %>
+                    <li>
+                        <%= link_to 'Sign Up', new_teammate_registration_path %>
+                    </li>
+                <% end %>
 
                 <% if @allow_explicit_locales %>
-                <li>
-                    <% if I18n.locale != I18n.default_locale %>
-                        <%= link_to 'English', url_for(locale: 'en') %>
-                    <% else %>
-                        <%= link_to 'Русский', url_for(locale: 'ru') %>
-                    <% end %>
-                </li>
+                    <li>
+                        <% if I18n.locale != I18n.default_locale %>
+                            <%= link_to 'English', url_for(locale: 'en') %>
+                        <% else %>
+                            <%= link_to 'Русский', url_for(locale: 'ru') %>
+                        <% end %>
+                    </li>
                 <% end %>
 
                 <li style='padding-top: 2.5%; padding-left: 5px;'>
