Temporarily display a stub for mentors carousel

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -54,7 +54,7 @@
 
     <a  name="services"></a>
 
-    <% if @mentors_count > 0 %>
+    <%# if @mentors_count > 0 %>
         <div class="content-section-a">
 
             <div class="container">
@@ -75,7 +75,7 @@
             <!-- /.container -->
 
         </div>
-    <% end %>
+    <%# end %>
     <!-- /.content-section-a -->
 
     <div class="content-section-b">
