test mentor photo

--- a/app/views/home/_carousel_stub.html.erb
+++ b/app/views/home/_carousel_stub.html.erb
@@ -15,7 +15,9 @@
                             <!-- Carousel items -->
                             <div class="carousel-inner">
                                 <div class="active item" data-slide-number="0">
-                                <img src="http://placehold.it/770x300&amp;text=one"></div>
+                                <!-- <img src="http://placehold.it/770x300&amp;text=one"> -->
+                                <img src="https://pp.vk.me/c637626/v637626502/d515/ewYQV8fAYeI.jpg">
+                                </div>
 
                                 <div class="item" data-slide-number="1">
                                 <img src="http://placehold.it/770x300&amp;text=two"></div>
@@ -88,7 +90,10 @@
                 <!-- Bottom switcher of slider -->
                 <ul class="hide-bullets carousel-thumbnails-list" style="list-style-type: none; margin-top: 20px;">
                     <li class="col-sm-2">
-                        <a class="thumbnail" id="carousel-selector-0"><img src="http://placehold.it/170x100&amp;text=one"></a>
+                        <a class="thumbnail" id="carousel-selector-0">
+                        <!-- <img src="http://placehold.it/170x100&amp;text=one"> -->
+                        <img src="https://pp.vk.me/c637626/v637626502/d515/ewYQV8fAYeI.jpg">
+                        </a>
                     </li>
 
                     <li class="col-sm-2">
