--- a/app/views/mentors/registrations/new.html.erb
+++ b/app/views/mentors/registrations/new.html.erb
@@ -13,7 +13,7 @@
             <br>
             <%= f.input :description, required: true, autofocus: true, label: false, placeholder: "A couple words about yourself", input_html: {class: "form-control"} %>
             <br>
-            <%= f.input :organization, required: true, autofocus: true, label: false, placeholder: "Organization", input_html: {class: "form-control"} %>
+            <%= f.input :organization, required: false, autofocus: true, label: false, placeholder: "Organization", input_html: {class: "form-control"} %>
             <br>
             <%= f.input :avatar, as: :file, input_html: {class: "form-control"} %>
             <br>
