Add en-ru translations for landing page

--- a/app/views/home/_carousel.html.erb
+++ b/app/views/home/_carousel.html.erb
@@ -1,7 +1,7 @@
 <div id="main_area">
         <!-- Slider -->
         <div class="mentors-carousel-header">
-            <h2 style='float: left;'>Our Mentors</h2>
+            <h2 style='float: left;'><%= t('landing.mentors_block.block_name') %></h2>
             <li style='list-style: none; margin-top: 1%;'>
                 <%= link_to I18n.t('landing.mentor_sign_up_button'), mentors_path , { class: 'btn btn-default btn-lg', style: 'float: right;' } %>
             </li>
