--- a/app/views/home/_sponsors_slider.html.erb
+++ b/app/views/home/_sponsors_slider.html.erb
@@ -1,6 +1,6 @@
 <!-- <div class="container sponsors-slider"> -->
   <div class="row">
-    <h2>Our Sponsors</h2>
+    <h2><%= t('landing.sponsors_block.block_name') %></h2>
   </div>
   <div class='row'>
     <div class='col-md-8' style="width: 100%;">
